--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ nhefs_weights <- tidysmd::nhefs_weights
 
 ggplot(
   nhefs_weights,
-  aes(x = smokeyrs, color = factor(qsmk), group = factor(qsmk))
+  aes(x = smokeyrs, color = factor(qsmk))
 ) +
   geom_ecdf() +
   xlab("Smoking Years") +
@@ -53,7 +53,7 @@ Additionally, `geom_ecdf()` supports a `weights` aesthetic to calculate weighted
 ```{r example2}
 ggplot(
   nhefs_weights,
-  aes(x = smokeyrs, color = factor(qsmk), group = factor(qsmk))
+  aes(x = smokeyrs, color = factor(qsmk))
 ) +
   geom_ecdf(aes(weights = w_ato)) +
   xlab("Smoking Years") +
