--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # ggecdf
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/malcolmbarrett/ggecdf/workflows/R-CMD-check/badge.svg)](https://github.com/malcolmbarrett/ggecdf/actions)
 <!-- badges: end -->
 
 The goal of ggecdf is to easily create weighted and unweighted empirical cumulative distributions (ECDFs) in ggplot2
